src/parser/generated/CopperParser.py
# Generated from Copper.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class CopperParser ( Parser ):

    grammarFileName = "Copper.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'model'", "'view'", "'dimension'", "'measure'", 
                     "'from'", "'join'", "'extends'", "'extension'", "'type'", 
                     "'expression'", "'primary_key'", "'value_format'", 
                     "'label'", "'description'", "'hidden'", "'tiers'", 
                     "'sql_latitude'", "'sql_longitude'", "'units'", "'relationship'", 
                     "'required'", "'optional'", "'string'", "'number'", 
                     "'date'", "'date_time'", "'yesno'", "'tier'", "'bin'", 
                     "'location'", "'zipcode'", "'distance'", "'duration'", 
                     "'time'", "'unquoted'", "'count'", "'sum'", "'average'", 
                     "'min'", "'max'", "'count_distinct'", "'median'", "'percentile'", 
                     "'left_outer'", "'inner'", "'full_outer'", "'cross'", 
                     "'one_to_one'", "'many_to_one'", "'one_to_many'", "'many_to_many'", 
                     "'usd'", "'eur'", "'gbp'", "'percent_1'", "'percent_2'", 
                     "'decimal_0'", "'decimal_1'", "'decimal_2'", "'id'", 
                     "'miles'", "'kilometers'", "'meters'", "'feet'", "'true'", 
                     "'false'", "'yes'", "'no'", "':'", "';'", "';;'", "'{'", 
                     "'}'", "'['", "']'", "','", "'('", "')'", "'.'", "'+'", 
                     "'-'", "'*'", "'/'", "'='", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "MODEL", "VIEW", "DIMENSION", "MEASURE", 
                      "FROM", "JOIN", "EXTENDS", "EXTENSION", "TYPE", "EXPRESSION", 
                      "PRIMARY_KEY", "VALUE_FORMAT", "LABEL", "DESCRIPTION", 
                      "HIDDEN_PARAM", "TIERS", "SQL_LATITUDE", "SQL_LONGITUDE", 
                      "UNITS", "RELATIONSHIP", "REQUIRED", "OPTIONAL", "STRING_TYPE", 
                      "NUMBER_TYPE", "DATE_TYPE", "DATE_TIME_TYPE", "YESNO_TYPE", 
                      "TIER_TYPE", "BIN_TYPE", "LOCATION_TYPE", "ZIPCODE_TYPE", 
                      "DISTANCE_TYPE", "DURATION_TYPE", "TIME_TYPE", "UNQUOTED_TYPE", 
                      "COUNT_TYPE", "SUM_TYPE", "AVERAGE_TYPE", "MIN_TYPE", 
                      "MAX_TYPE", "COUNT_DISTINCT_TYPE", "MEDIAN_TYPE", 
                      "PERCENTILE_TYPE", "LEFT_OUTER", "INNER", "FULL_OUTER", 
                      "CROSS", "ONE_TO_ONE", "MANY_TO_ONE", "ONE_TO_MANY", 
                      "MANY_TO_MANY", "USD", "EUR", "GBP", "PERCENT_1", 
                      "PERCENT_2", "DECIMAL_0", "DECIMAL_1", "DECIMAL_2", 
                      "ID", "MILES", "KILOMETERS", "METERS", "FEET", "TRUE", 
                      "FALSE", "YES", "NO", "COLON", "SEMICOLON", "SEMICOLON_SEMICOLON", 
                      "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "COMMA", 
                      "LPAREN", "RPAREN", "DOT", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "EQUALS", "LESS_THAN", "GREATER_THAN", "IDENTIFIER", 
                      "STRING_LITERAL", "NUMBER_LITERAL", "COMMENT", "NEWLINE", 
                      "WS", "HIDDEN" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_comment = 2
    RULE_modelStatement = 3
    RULE_modelBody = 4
    RULE_dimensionStatement = 5
    RULE_measureStatement = 6
    RULE_viewStatement = 7
    RULE_viewBody = 8
    RULE_fromStatement = 9
    RULE_joinStatement = 10
    RULE_extendsStatement = 11
    RULE_extensionStatement = 12
    RULE_dimensionParameter = 13
    RULE_typeParameter = 14
    RULE_dimensionType = 15
    RULE_measureParameter = 16
    RULE_measureTypeParameter = 17
    RULE_measureType = 18
    RULE_joinParameter = 19
    RULE_joinTypeParameter = 20
    RULE_joinType = 21
    RULE_relationshipParameter = 22
    RULE_relationshipType = 23
    RULE_expressionParameter = 24
    RULE_primaryKeyParameter = 25
    RULE_valueFormatParameter = 26
    RULE_labelParameter = 27
    RULE_descriptionParameter = 28
    RULE_hiddenParameter = 29
    RULE_tiersParameter = 30
    RULE_sqlLatitudeParameter = 31
    RULE_sqlLongitudeParameter = 32
    RULE_unitsParameter = 33
    RULE_daxExpression = 34
    RULE_daxContent = 35
    RULE_daxToken = 36
    RULE_identifier = 37
    RULE_contextualKeyword = 38
    RULE_stringLiteral = 39
    RULE_numberLiteral = 40
    RULE_booleanValue = 41
    RULE_booleanLiteral = 42
    RULE_formatName = 43
    RULE_units = 44
    RULE_identifierList = 45
    RULE_stringList = 46
    RULE_numberList = 47

    ruleNames =  [ "program", "statement", "comment", "modelStatement", 
                   "modelBody", "dimensionStatement", "measureStatement", 
                   "viewStatement", "viewBody", "fromStatement", "joinStatement", 
                   "extendsStatement", "extensionStatement", "dimensionParameter", 
                   "typeParameter", "dimensionType", "measureParameter", 
                   "measureTypeParameter", "measureType", "joinParameter", 
                   "joinTypeParameter", "joinType", "relationshipParameter", 
                   "relationshipType", "expressionParameter", "primaryKeyParameter", 
                   "valueFormatParameter", "labelParameter", "descriptionParameter", 
                   "hiddenParameter", "tiersParameter", "sqlLatitudeParameter", 
                   "sqlLongitudeParameter", "unitsParameter", "daxExpression", 
                   "daxContent", "daxToken", "identifier", "contextualKeyword", 
                   "stringLiteral", "numberLiteral", "booleanValue", "booleanLiteral", 
                   "formatName", "units", "identifierList", "stringList", 
                   "numberList" ]

    EOF = Token.EOF
    MODEL=1
    VIEW=2
    DIMENSION=3
    MEASURE=4
    FROM=5
    JOIN=6
    EXTENDS=7
    EXTENSION=8
    TYPE=9
    EXPRESSION=10
    PRIMARY_KEY=11
    VALUE_FORMAT=12
    LABEL=13
    DESCRIPTION=14
    HIDDEN_PARAM=15
    TIERS=16
    SQL_LATITUDE=17
    SQL_LONGITUDE=18
    UNITS=19
    RELATIONSHIP=20
    REQUIRED=21
    OPTIONAL=22
    STRING_TYPE=23
    NUMBER_TYPE=24
    DATE_TYPE=25
    DATE_TIME_TYPE=26
    YESNO_TYPE=27
    TIER_TYPE=28
    BIN_TYPE=29
    LOCATION_TYPE=30
    ZIPCODE_TYPE=31
    DISTANCE_TYPE=32
    DURATION_TYPE=33
    TIME_TYPE=34
    UNQUOTED_TYPE=35
    COUNT_TYPE=36
    SUM_TYPE=37
    AVERAGE_TYPE=38
    MIN_TYPE=39
    MAX_TYPE=40
    COUNT_DISTINCT_TYPE=41
    MEDIAN_TYPE=42
    PERCENTILE_TYPE=43
    LEFT_OUTER=44
    INNER=45
    FULL_OUTER=46
    CROSS=47
    ONE_TO_ONE=48
    MANY_TO_ONE=49
    ONE_TO_MANY=50
    MANY_TO_MANY=51
    USD=52
    EUR=53
    GBP=54
    PERCENT_1=55
    PERCENT_2=56
    DECIMAL_0=57
    DECIMAL_1=58
    DECIMAL_2=59
    ID=60
    MILES=61
    KILOMETERS=62
    METERS=63
    FEET=64
    TRUE=65
    FALSE=66
    YES=67
    NO=68
    COLON=69
    SEMICOLON=70
    SEMICOLON_SEMICOLON=71
    LBRACE=72
    RBRACE=73
    LBRACKET=74
    RBRACKET=75
    COMMA=76
    LPAREN=77
    RPAREN=78
    DOT=79
    PLUS=80
    MINUS=81
    MULTIPLY=82
    DIVIDE=83
    EQUALS=84
    LESS_THAN=85
    GREATER_THAN=86
    IDENTIFIER=87
    STRING_LITERAL=88
    NUMBER_LITERAL=89
    COMMENT=90
    NEWLINE=91
    WS=92
    HIDDEN=93

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CopperParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CopperParser.StatementContext)
            else:
                return self.getTypedRuleContext(CopperParser.StatementContext,i)


        def getRuleIndex(self):
            return CopperParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = CopperParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CopperParser.MODEL or _la==CopperParser.VIEW or _la==CopperParser.COMMENT or _la==CopperParser.NEWLINE:
                self.state = 96
                self.statement()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(CopperParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modelStatement(self):
            return self.getTypedRuleContext(CopperParser.ModelStatementContext,0)


        def viewStatement(self):
            return self.getTypedRuleContext(CopperParser.ViewStatementContext,0)


        def comment(self):
            return self.getTypedRuleContext(CopperParser.CommentContext,0)


        def NEWLINE(self):
            return self.getToken(CopperParser.NEWLINE, 0)

        def getRuleIndex(self):
            return CopperParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = CopperParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CopperParser.MODEL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.modelStatement()
                pass
            elif token in [CopperParser.VIEW]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.viewStatement()
                pass
            elif token in [CopperParser.COMMENT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.comment()
                pass
            elif token in [CopperParser.NEWLINE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.match(CopperParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(CopperParser.COMMENT, 0)

        def getRuleIndex(self):
            return CopperParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = CopperParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_comment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(CopperParser.COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModelStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODEL(self):
            return self.getToken(CopperParser.MODEL, 0)

        def COLON(self):
            return self.getToken(CopperParser.COLON, 0)

        def identifier(self):
            return self.getTypedRuleContext(CopperParser.IdentifierContext,0)


        def LBRACE(self):
            return self.getToken(CopperParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CopperParser.RBRACE, 0)

        def modelBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CopperParser.ModelBodyContext)
            else:
                return self.getTypedRuleContext(CopperParser.ModelBodyContext,i)


        def getRuleIndex(self):
            return CopperParser.RULE_modelStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelStatement" ):
                listener.enterModelStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelStatement" ):
                listener.exitModelStatement(self)




    def modelStatement(self):

        localctx = CopperParser.ModelStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_modelStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(CopperParser.MODEL)
            self.state = 113
            self.match(CopperParser.COLON)
            self.state = 114
            self.identifier()
            self.state = 115
            self.match(CopperParser.LBRACE)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CopperParser.DIMENSION or _la==CopperParser.MEASURE or _la==CopperParser.COMMENT or _la==CopperParser.NEWLINE:
                self.state = 116
                self.modelBody()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 122
            self.match(CopperParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModelBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dimensionStatement(self):
            return self.getTypedRuleContext(CopperParser.DimensionStatementContext,0)


        def measureStatement(self):
            return self.getTypedRuleContext(CopperParser.MeasureStatementContext,0)


        def comment(self):
            return self.getTypedRuleContext(CopperParser.CommentContext,0)


        def NEWLINE(self):
            return self.getToken(CopperParser.NEWLINE, 0)

        def getRuleIndex(self):
            return CopperParser.RULE_modelBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelBody" ):
                listener.enterModelBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelBody" ):
                listener.exitModelBody(self)




    def modelBody(self):

        localctx = CopperParser.ModelBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_modelBody)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CopperParser.DIMENSION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.dimensionStatement()
                pass
            elif token in [CopperParser.MEASURE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.measureStatement()
                pass
            elif token in [CopperParser.COMMENT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.comment()
                pass
            elif token in [CopperParser.NEWLINE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 127
                self.match(CopperParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DimensionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIMENSION(self):
            return self.getToken(CopperParser.DIMENSION, 0)

        def COLON(self):
            return self.getToken(CopperParser.COLON, 0)

        def identifier(self):
            return self.getTypedRuleContext(CopperParser.IdentifierContext,0)


        def LBRACE(self):
            return self.getToken(CopperParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CopperParser.RBRACE, 0)

        def dimensionParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CopperParser.DimensionParameterContext)
            else:
                return self.getTypedRuleContext(CopperParser.DimensionParameterContext,i)


        def getRuleIndex(self):
            return CopperParser.RULE_dimensionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimensionStatement" ):
                listener.enterDimensionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimensionStatement" ):
                listener.exitDimensionStatement(self)




    def dimensionStatement(self):

        localctx = CopperParser.DimensionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dimensionStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(CopperParser.DIMENSION)
            self.state = 131
            self.match(CopperParser.COLON)
            self.state = 132
            self.identifier()
            self.state = 133
            self.match(CopperParser.LBRACE)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CopperParser.TYPE) | (1 << CopperParser.EXPRESSION) | (1 << CopperParser.PRIMARY_KEY) | (1 << CopperParser.VALUE_FORMAT) | (1 << CopperParser.LABEL) | (1 << CopperParser.DESCRIPTION) | (1 << CopperParser.TIERS) | (1 << CopperParser.SQL_LATITUDE) | (1 << CopperParser.SQL_LONGITUDE) | (1 << CopperParser.UNITS))) != 0) or ((((_la - 90)) & ~0x3f) == 0 and ((1 << (_la - 90)) & ((1 << (CopperParser.COMMENT - 90)) | (1 << (CopperParser.NEWLINE - 90)) | (1 << (CopperParser.HIDDEN - 90)))) != 0):
                self.state = 134
                self.dimensionParameter()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(CopperParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MeasureStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MEASURE(self):
            return self.getToken(CopperParser.MEASURE, 0)

        def COLON(self):
            return self.getToken(CopperParser.COLON, 0)

        def identifier(self):
            return self.getTypedRuleContext(CopperParser.IdentifierContext,0)


        def LBRACE(self):
            return self.getToken(CopperParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CopperParser.RBRACE, 0)

        def measureParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CopperParser.MeasureParameterContext)
            else:
                return self.getTypedRuleContext(CopperParser.MeasureParameterContext,i)


        def getRuleIndex(self):
            return CopperParser.RULE_measureStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMeasureStatement" ):
                listener.enterMeasureStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMeasureStatement" ):
                listener.exitMeasureStatement(self)




    def measureStatement(self):

        localctx = CopperParser.MeasureStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_measureStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(CopperParser.MEASURE)
            self.state = 143
            self.match(CopperParser.COLON)
            self.state = 144
            self.identifier()
            self.state = 145
            self.match(CopperParser.LBRACE)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CopperParser.TYPE) | (1 << CopperParser.EXPRESSION) | (1 << CopperParser.VALUE_FORMAT) | (1 << CopperParser.LABEL) | (1 << CopperParser.DESCRIPTION))) != 0) or ((((_la - 90)) & ~0x3f) == 0 and ((1 << (_la - 90)) & ((1 << (CopperParser.COMMENT - 90)) | (1 << (CopperParser.NEWLINE - 90)) | (1 << (CopperParser.HIDDEN - 90)))) != 0):
                self.state = 146
                self.measureParameter()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
